--- a/beauty-and-js.html
+++ b/beauty-and-js.html
@@ -39,27 +39,64 @@
 <div class="presentation">
 
 <div class="slide">
-<h1>The Beauty and the JavaScript</h1>
-<h2>The good, the bad... but mostly ugly</h2>
-<h3>Karol Kuczmarski</h3>
-<h4>Polidea</h4>
+	<h1>The Beauty and the JavaScript</h1>
+	<h2>The good, the bad... but mostly ugly</h2>
+	<h3>Karol Kuczmarski</h3>
+	<h4>Polidea</h4>
 </div>
 
 
 <div class="slide">
-<h1>[slide title]</h1>
-<ul>
-<li>[point one]</li>
-<li>[point two]</li>
-<li>[point three]</li>
-<li>[point four]</li>
-<li>[point five]</li>
-</ul>
-<div class="handout">
-[any material that should appear in print but not on the slide]
-</div>
+	<h1>Why JavaScript?</h1>
+	<ul class="incremental">
+		<li>Ubiquitous programming language of the Web
+		<ul>
+			<li>supported by pretty much every browser (Lynx notwithstanding)</li>
+			<li>works by default without any plugins</li>
+			<li>surprisingly efficient (Firefox' TraceMonkey, Chrome's V8)</li>
+		</ul></li>
+		<li>Endorsed by the Big Three:
+		<ul>
+			<li>Apple doesn't like Flash</li>
+			<li>Google supports everything related to the Web</li>
+			<li>Microsoft sees the failure of Silverlight</li>
+		</ul></li>
+		<li>Not only web applications but also:
+		<ul>
+			<li>server-side code (<em>Node.js</em>)</li>
+			<li>mobile apps (<em>PhoneGap</em>, <em>MonoTouch</em>, ...)</li>
+		</ul></li>
+	</ul>
+	<div class="handout">
+		Examples of useful web applications include LucidChart, Gmail, Prezi, Scribd and many more.
+	</div>
 </div>
 
+<div class="slide">
+	<h1>Why JavaScript <em>sucks</em>?</h1>
+	<ul>
+		<li>It wasn't designed for solutions of this scale</li>
+		<li>It's very different from almost every other major language
+		<ul>
+			<li>No, it's not "scripting flavor of Java"</li>
+		</ul></li>
+		<li>Its seeming simplicity is deceptive:
+		<ul>
+			<li>Very easy to acquire bad habits</li>
+			<li>Might be easy to pick up, but is really hard to master</li>
+		</ul></li>
+		<li>Has quite a number of major and minor flaws</li>
+	</ul>
+</div>
+
+<div class="slide">
+	<h1>What can we do about it?</h1>
+	<ul>
+		<li>Use libraries &amp; and frameworks that hide the ugly details</li>
+		<li>Understand the core language concepts</li>
+		<li>Refrain from using the poorly designed features</li>
+	</ul>
+</div>
 
 </div>
 
