Few more slides, including one with book's cover

--- a/beauty-and-js.html
+++ b/beauty-and-js.html
@@ -92,10 +92,59 @@
 <div class="slide">
 	<h1>What can we do about it?</h1>
 	<ul>
-		<li>Use libraries &amp; and frameworks that hide the ugly details</li>
-		<li>Understand the core language concepts</li>
+		<li>Use libraries &amp; and frameworks that hide the ugly details
+		<ul>
+			<li style="font-style:italic">"There is a jQuery plugin for that!"</li>
+		</ul></li>
+		<li>Understand (and embrace) the core language concepts</li>
 		<li>Refrain from using the poorly designed features</li>
 	</ul>
+</div>
+
+<div class="slide">
+	<h1>The Source</h1>
+	<div style="float:right; width: 45%">
+		<img src="http://covers.oreilly.com/images/9780596517748/lrg.jpg" alt="JavaScript: The Good Parts">
+	</div>
+	<ul>
+		<li><em>JavaScript: The Good Parts</em> by Douglas Crockford
+		<ul>
+			<li>Author of JSON.js library and developer of JSLint</li>
+		</ul></li>
+		<li>Must-read for any serious (or semi-serious) JavaScript developer</li>
+		<li>Most of the concepts here are drawn from this book</li>
+		<li>Despite being thin, it's <strong>not</strong> an airplane book
+		<ul>
+			<li>Quite "dense"</li>
+			<li>Lots of code</li>
+			<li>To be taken with grain of salt</li>
+		</ul></li>
+	</ul><
+</div>
+
+
+<div class="slide">
+	<h1>JavaScript libraries: the two towers</h1>
+	<p>Two major types of JavaScript libraries:
+	<ol>
+		<li>Cross-browser DOM & AJAX libraries:
+		<ul>
+			<li>jQuery, Ext.JS, Dojo, YUI, ...</li>
+		</ul></li>
+		<li>Frameworks with language extensions:
+		<ul>
+			<li>Underscore.js, Prototype, MooTools, ...</li>
+		</ul></li>
+	</ol>
+</div>
+
+<div class="slide">
+	<h1>Everyone* uses an AJAX/DOM library</h1>
+	<ul>
+		<li>...and it's almost always jQuery</li>
+		
+	</ul>
+	<small>* slightly above 50% according to <a href="http://w3techs.com/technologies/overview/javascript_library/all">W3 Techs</a></small>
 </div>
 
 </div>
