First jQuery slide added

--- a/beauty-and-js.html
+++ b/beauty-and-js.html
@@ -96,15 +96,22 @@
 		<ul>
 			<li style="font-style:italic">"There is a jQuery plugin for that!"</li>
 		</ul></li>
-		<li>Understand (and embrace) the core language concepts</li>
-		<li>Refrain from using the poorly designed features</li>
+		<li>Understand (and embrace) the core language concepts:
+		<ul>
+			<li>Closures, class-less object model, and many more...</li>
+		</ul></li>
+		<li>Refrain from using the poorly designed features
+		<ul>
+			<li>You will see them :-)</li>
+		</ul></li>
 	</ul>
 </div>
 
 <div class="slide">
 	<h1>The Source</h1>
 	<div style="float:right; width: 45%">
-		<img src="http://covers.oreilly.com/images/9780596517748/lrg.jpg" alt="JavaScript: The Good Parts">
+		<img src="http://covers.oreilly.com/images/9780596517748/lrg.jpg" style="height: 500px"
+			alt="JavaScript: The Good Parts">
 	</div>
 	<ul>
 		<li><em>JavaScript: The Good Parts</em> by Douglas Crockford
@@ -142,9 +149,23 @@
 	<h1>Everyone* uses an AJAX/DOM library</h1>
 	<ul>
 		<li>...and it's almost always jQuery</li>
-		
+		<li>Functionality includes:
+		<ul>
+			<li>CSS-like selectors for accessing DOM elements</li>
+			<li>Methods for manipulating DOM elements</li>
+			<li>Event binding</li>
+			<li>Simplified handling of AJAX requests</li>
+			<li>Shielding against browsers' peculiarities</li>
+			<li>...and many more</li>
+		</ul></li>
+		<li>Libraries like jQuery are one of reasons why JavaScript is sometimes called "assembler of the Web"</li>
 	</ul>
+	<br/>
 	<small>* slightly above 50% according to <a href="http://w3techs.com/technologies/overview/javascript_library/all">W3 Techs</a></small>
+</div>
+
+<div class="slide">
+	<h1>...</h1>
 </div>
 
 </div>
