Some fixes here and there

--- a/beauty-and-js.html
+++ b/beauty-and-js.html
@@ -48,18 +48,18 @@
 
 <div class="slide">
 	<h1>Why JavaScript?</h1>
-	<ul class="incremental">
+	<ul>
 		<li>Ubiquitous programming language of the Web
 		<ul>
-			<li>supported by pretty much every browser (Lynx notwithstanding)</li>
+			<li>supported by pretty much every browser <br>(Lynx notwithstanding)</li>
 			<li>works by default without any plugins</li>
-			<li>surprisingly efficient (Firefox' TraceMonkey, Chrome's V8)</li>
+			<li>surprisingly efficient (Chrome's V8, Firefox' TraceMonkey)</li>
 		</ul></li>
 		<li>Endorsed by the Big Three:
 		<ul>
 			<li>Apple doesn't like Flash</li>
 			<li>Google supports everything related to the Web</li>
-			<li>Microsoft sees the failure of Silverlight</li>
+			<li>Microsoft sees the failure of web Silverlight</li>
 		</ul></li>
 		<li>Not only web applications but also:
 		<ul>
@@ -74,7 +74,7 @@
 
 <div class="slide">
 	<h1>Why JavaScript <em>sucks</em>?</h1>
-	<ul>
+	<ul class="incremental">
 		<li>It wasn't designed for solutions of this scale</li>
 		<li>It's very different from almost every other major language
 		<ul>
@@ -219,7 +219,7 @@
 			<li>Having "keyword" <code>inherits</code> doesn't mean we have true inheritance</li>
 			<li>Interpreter will <strong>not</strong> check if we use the modified language correctly</li>
 		</ul></li>
-		<li><small><em>Aside</em>: What other languages actually allow you to implement <strong>whole paradigms</strong> in them?</small></li>
+		<li><small><em>Aside</em>: What other languages actually allow you to implement <br><strong>whole programming paradigms</strong> in them?</small></li>
 	</ul>
 </div>
 
@@ -227,7 +227,7 @@
 <div class="slide">
 	<h1>Back to basics</h1>
 	<ul>
-		<li>JavaScript is:
+		<li>JavaScript as a language is:
 		<ul>
 			<li>intepreted</li>
 			<li>dynamically-typed</li>
@@ -253,8 +253,7 @@
 	<ul>
 		<li><code>function</code> is about the only structural construct in JavaScript
 		<ul>
-			<li>Program in JavaScript is essentially a set of ((deeply) nested) functions</li>
-			<li>No classes, remember? :)</li>
+			<li>Program in JS is essentially a set of ((deeply) nested) functions</li>
 		</ul></li>
 		<li>Functions work as <em>first-order values</em>:
 		<ul>
@@ -264,10 +263,17 @@
 		</ul></li>
 		<li>Functions can be nested, creating <strong>closures</strong>:
 		<ul>
-			<li>Outside variables are "captured" within the closure and can be modified...</li>
-			<li>...regardless of how the function is passed around and when it's actually called</li>
+			<li>Outside variables are "captured" within closure and can be modified...</li>
+			<li>...regardless of how and when the function is actually called</li>
 			<li>Classic example: <em>event handlers</em></li>
 		</ul></li>
+	</ul>
+</div>
+
+<div class="slide">
+	<h1></h1>
+	<ul>
+		
 	</ul>
 </div>
 
