--- a/beauty-and-js.html
+++ b/beauty-and-js.html
@@ -21,6 +21,8 @@
 <link rel="stylesheet" href="ui/default/opera.css" type="text/css" media="projection" id="operaFix" />
 <!-- S5 JS -->
 <script src="ui/default/slides.js" type="text/javascript"></script>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js" type="text/javascript"></script>
 </head>
 <body>
 
@@ -172,7 +174,7 @@
 	$(document).ready(document_ready);
 
 	function document_ready() {
-		$(".my").bind('click', myButton_click);
+		$("#myButton").bind("click", myButton_click);
 	}
 
 	function myButton_click() {
@@ -181,6 +183,15 @@
 
 &lt;/script&gt;
 	</pre>
+	<input type="button" value="Click me!" id="myButton"
+		style="float:right; width: 150px; height: 30px; font-size: 20px;">
+	<script type="text/javascript">
+		$(document).ready(function() {
+			$("#myButton").bind('mouseover', function() {
+				$(this).css("background-color", "red").fadeOut('slow');
+			});
+		});
+	</script>
 </div>
 
 <div class="slide">
@@ -241,11 +252,36 @@
 		</ul></li>
 		<li>The core concept of JavaScript's object model is <strong>prototype</strong>
 		<ul>
-			<li>It's not a class!</li>
+			<li>It's not a class! <small>(but can be used to simulate inheritance)</small></li>
 			<li>Prototype is a "parent" or "template" for an <em>object</em></li>
 			<li>Attributes not present in object are taken from its prototype</li>
 		</ul></li>
 	</ul>
+</div>
+
+<div class="slide">
+	<h1>Prototypes by example</h1>
+	<ul>
+		<li>Each JavaScript type (<code>String</code>, <code>Number</code>, <code>Object</code>, <code>Function</code>) has a built-in, predefined protype
+		<ul>
+			<li>It's used by every instance of particular type</li>
+			<li>We can access it via <code>prototype</code> attribute</li>
+		</ul></li>
+		<li>Those prototypes can be modified like any object
+		<ul>
+			<li>We can, say, extend them</li>
+		</ul></li>
+	</ul>
+	<br/>
+	<pre>
+String.prototype.capitalize = function() {
+  var firstLetter = this.substr(0, 1).toUpperCase();
+  var rest = this.substr(0, 1).toUpperCase();
+  return firstLetter + rest;
+}
+
+console.log("alice".capitalize());  // "Alice"
+	</pre>
 </div>
 
 <div class="slide">
@@ -265,15 +301,14 @@
 		<ul>
 			<li>Outside variables are "captured" within closure and can be modified...</li>
 			<li>...regardless of how and when the function is actually called</li>
-			<li>Classic example: <em>event handlers</em></li>
 		</ul></li>
 	</ul>
 </div>
 
 <div class="slide">
-	<h1></h1>
+	<h1>Closures can do (almost) everything</h1>
 	<ul>
-		
+		<li>JavaScript closures are responsible for </li>
 	</ul>
 </div>
 
