Draft of closures slide

--- a/beauty-and-js.html
+++ b/beauty-and-js.html
@@ -240,7 +240,7 @@
 	<ul>
 		<li>JavaScript as a language is:
 		<ul>
-			<li>intepreted</li>
+			<li>interpreted</li>
 			<li>dynamically-typed</li>
 			<li>object-oriented</li>
 			<li>prototype-based</li>
@@ -262,7 +262,7 @@
 <div class="slide">
 	<h1>Prototypes by example</h1>
 	<ul>
-		<li>Each JavaScript type (<code>String</code>, <code>Number</code>, <code>Object</code>, <code>Function</code>) has a built-in, predefined protype
+		<li>Each JavaScript type (<code>String</code>, <code>Number</code>, <code>Array</code>, <code>Object</code>, <code>Function</code>) has a built-in, predefined prototype
 		<ul>
 			<li>It's used by every instance of particular type</li>
 			<li>We can access it via <code>prototype</code> attribute</li>
@@ -306,9 +306,15 @@ console.log("alice".capitalize());  // "Alice"
 </div>
 
 <div class="slide">
-	<h1>Closures can do (almost) everything</h1>
+	<h1>One closure to rule them all</h1>
 	<ul>
-		<li>JavaScript closures are responsible for </li>
+		<li>JavaScript closures allow for mechanisms that other languages have dedicated constructs for - including:
+		<ul>
+			<li>proper scoping of variables</li>
+			<li>modularization</li>
+			<li>encapsulation</li>
+			<li>inheritance</li>
+		</ul></li>
 	</ul>
 </div>
 
