--- a/beauty-and-js.html
+++ b/beauty-and-js.html
@@ -77,7 +77,7 @@
 
 <div class="slide">
 	<h1>Why JavaScript <em>sucks</em>?</h1>
-	<ul class="incremental">
+	<ul>
 		<li>It wasn't designed for solutions of this scale</li>
 		<li>It's very different from almost every other major language
 		<ul>
@@ -86,7 +86,7 @@
 		<li>Its seeming simplicity is deceptive:
 		<ul>
 			<li>Very easy to acquire bad habits</li>
-			<li>Might be easy to pick up, but is really hard to master</li>
+			<li>Might be easy to pick up, but is hard to master</li>
 		</ul></li>
 		<li>Has quite a number of major and minor flaws</li>
 	</ul>
@@ -135,7 +135,7 @@
 
 <div class="slide">
 	<h1>JavaScript libraries: the two towers</h1>
-	<p>Two major types of JavaScript libraries:
+	<p>Two major types of JavaScript libraries:</p>
 	<ol>
 		<li>Cross-browser DOM &amp; AJAX libraries:
 		<ul>
@@ -179,7 +179,7 @@
 	}
 
 	function myButton_mouseover() {
-		$(this).css("background-color", "red").fadeOut();
+		$("#myButton").css("background-color", "red").fadeOut();
 	}
 
 &lt;/script&gt;
@@ -203,7 +203,7 @@
         for (var i = 0; i &lt; BUTTON_COUNT; ++i) {
           $("#button" + i).bind("click", (function(k) {
               return function() {
-                  $.post("/rpc/foo", { index: k}, function(resp) {
+                  $.post("/rpc/foo", {index: k}, function(resp) {
                       if (resp) {
                           alert("[" + k + "] = " + resp.message);
                       }
@@ -246,7 +246,7 @@
 			<li>object-oriented</li>
 			<li>prototype-based</li>
 		</ul></li>
-		<li>JavaScript has <em>no notion</em> of classes
+		<li>JavaScript doesn't really support classes
 		<ul>
 			<li>Everything is just an object</li>
 			<li>You cannot define new types - you can only create new objects</li>
@@ -304,6 +304,32 @@ console.log("alice".capitalize());  // "Alice"
 			<li>...regardless of how and when the function is actually called</li>
 		</ul></li>
 	</ul>
+</div>
+
+<div class="slide">
+	<h1>Closures by example</h1>
+	<pre>
+function getMoreItems() {
+    $.getJSON("/rpc/get_more", function(response) {
+        var items = [];
+        $.each(response.items, function(idx, val) {
+            items.push("[" + val.type + "] " + val.text);
+        });
+        showItems(items);
+    });
+}
+	</pre>
+	<div class="handout">
+		<em>Note</em>: This usage of <code>$.each</code> is roughly equivalent to the following loop:
+		<pre>
+for (var idx in response.items) {
+    if (response.items.hasOwnProperty(idx)) {
+        var val = response.items[idx];
+        items.push("[" + val.type + "] " + val.text);
+    }
+}
+		</pre>
+	</div>
 </div>
 
 <div class="slide">
@@ -385,10 +411,6 @@ console.log("Counter's value == " + counter.getValue());
 	</pre>
 </div>
 
-<div class="slide">
-	<h1></h1>
-</div>
-
 </div>
 
 <div class="slide">
@@ -453,11 +475,21 @@ vec.scale(42);
 <div class="slide">
 	<h1>Is it bad?...</h1>
 	<ul>
-		<li>It works and it's simple</li>
+		<li>It works and it's simple
+		<ul>
+			<li>Explicit <code>new</code> also makes it more evident that an object is being created</li>
+		</ul></li>
 		<li>But while it's useful, this approach has some problems on its own:
 		<ul>
 			<li>It offers <strong>no encapsulation</strong> whatsoever</li>
-			<li>The constructor function can still be called normally and yield unexpected results</li>
+			<li>Resulting object still doesn't have distinct type
+			<ul>
+				<li><code>typeof(new Foo())</code> equals to <code>"object"</code>, not <code>"Foo"</code></li>
+			</ul></li>
+			<li>The constructor function can still be called normally, i.e. without <code>new</code>
+			<ul>
+				<li>It will return <code>undefined</code> as result</li>
+			</ul></li>
 			<li><code>this</code> keyword in JS can be <strong>very</strong> misleading</li>
 		</ul></li>
 	</ul>
@@ -472,13 +504,11 @@ vec.scale(42);
 	</ul>
 	<br/>
 	<pre>
-Game.prototype.update = function(dt) {
-    var objects = this.objects;
-    this.objects = [];
+Game.prototype.setupEventHandlers = function() {
     var that = this;
-    $.each(objects, function() {
-        var active = this.update(dt);
-        if (active) that.objects.push(this);
+    $("#gamefield").bind("click", function(event) {
+         var obj = that.hitTest(event);
+         if (obj) obj.click();
     });
 };
 	</pre>
